# playlist-sync

./: LICENSE  README.md  default.nix  flake.nix  playlist-dl.cabal  playlist-sync.cabal  shell.nix  slskd-deps.json
app/: Main.hs
