cabal-version: 2.4
name: playlist-sync
version: 0.1.0.0
build-type: Simple

executable playlist-sync
  hs-source-dirs: app
  main-is: Main.hs
  default-extensions: GHC2021
  ghc-options: -Wunused-imports -Werror=unused-packages

  build-depends:
      base >=4.14 && <5
    , aeson
    , HTTP
    , http-conduit
    , directory-tree
    , filepath
    , process
    , time
    , htaglib
    , bytestring
    , uuid
    , text
    , unicode-transforms
    , transformers
    , network-uri
    , base64-bytestring
    , optparse-generic
    , yaml
    , unix
    , temporary
    , directory
    , extra
    , unordered-containers
    , hashable
    , async-extra
